# awbw-notifications

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build.yaml  cloudbuild.yaml  deployment.yaml  docker-compose.yaml  setup_gcp.sh
awbw-notif-bruno/: bruno.json  run.bru
pipelines/: build.yaml  deployment.yaml
src/: main.rs
