[package]
name = "awbw_notifier"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = "0.7"
cookie_store = "0.21"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "gzip", "brotli", "deflate", "rustls-tls"] }
reqwest_cookie_store = "0.8"
scraper = "0.19"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
urlencoding = "2"
dotenvy = "0.15"
gcp_auth = "0.12"
